# microcontroller-tools

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
avr/: __init__.py  boards.py  cli.py  discover.py  flash.py  monitor.py  reset.py  usb_ids.py
common/: __init__.py  _mpy.py  code.py  family.py  info.py  lint.py  mip.py  repl.py  reset.py  wifi.py
esp32/: __init__.py  _mpy.py  _stub.py  boards.py  cli.py  code.py  discover.py  firmware.py  flash.py  info.py  lint.py  mip.py  pin_rules.py  repl.py  reset.py  usb_ids.py  wifi.py
esp32/docs/: ESP32-C3.md  ESP32.md
pico/: __init__.py  _mpy.py  boards.py  cli.py  discover.py  firmware.py  flash.py  info.py  lint.py  pin_rules.py  usb_ids.py
pico/docs/: RP2040.md  RP2350.md
