[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microcontroller-tools"
version = "0.1.0"
description = "CLI tools for working with MicroPython-capable microcontrollers over USB."
requires-python = ">=3.14"
readme = "README.md"
authors = [{ name = "Ted Fiedler", email = "ted.fiedler@icloud.com" }]
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "ruff>=0.6",
    "types-pyserial>=3.5",
]

[project.scripts]
esp32 = "esp32.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["esp32"]

[tool.mypy]
strict = true
python_version = "3.14"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
